--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@tensorflow/tfjs": "3.9.0",
+    "firebase": "^9.10.0",
     "gh-pages": "^3.2.3",
     "react": "16.5.2",
     "react-dom": "16.5.2",
