--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "main": "src/index.js",
   "dependencies": {
     "@tensorflow/tfjs": "^3.20.0",
-    "firebase": "^9.13.0",
+    "concurrently": "^7.6.0",
+    "firebase": "^9.14.0",
+    "firebase-tools": "^11.16.1",
     "firebaseui": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +20,6 @@
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^3.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start:emulators": "firebase emulators:start --only auth,database",
     "start": "concurrently --kill-others \"npm run start:emulators\" \"react-scripts start\"",
