--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.js",
   "dependencies": {
     "@tensorflow/tfjs": "^3.20.0",
+    "concurrently": "^7.5.0",
     "firebase": "^9.13.0",
     "firebaseui": "^6.0.1",
     "react": "^18.2.0",
@@ -18,7 +19,10 @@
     "reactjs-popup": "^2.0.5",
     "web-vitals": "^3.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ajv": "^6.12.6",
+    "typescript": "^4.8.4"
+  },
   "scripts": {
     "start:emulators": "firebase emulators:start --only auth,database",
     "start": "concurrently --kill-others \"npm run start:emulators\" \"react-scripts start\"",
