--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "terminal.integrated.gpuAcceleration": "on"
-}
+  "terminal.integrated.gpuAcceleration": "on",
+  "editor.codeActionsOnSave": { "source.fixAll": true },
+  "editor.formatOnSave": false,
+} 
