--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^3.20.0",
     "concurrently": "^7.6.0",
-    "firebase": "^9.14.0",
+    "firebase": "^9.16.0",
     "firebase-tools": "^11.16.1",
     "firebaseui": "^6.0.1",
     "react": "^18.2.0",
@@ -54,7 +54,10 @@
     "semi": false,
     "singleQuote": true,
     "useTabs": false,
-    "complexity": ["error", 2]
+    "complexity": [
+      "error",
+      2
+    ]
   },
   "husky": {
     "hooks": {
